click  creates new mod'

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -2,16 +2,19 @@
 <html>
 <head>
     <title></title>
+    <script src="jquery-1.10.1.min.js"></script>
     <script src="popup.js"></script>
 </head>
 <body>
     <div id="tomodo">
-        <div class="modit">
-            Mod it
-        </div>
-        <div class="number">
+        <a href="" target="_blank">
+            <div class="modit">
+                Mod it
+            </div>
+            <div class="number">
 
-        </div>
+            </div>
+        </a>
     </div>
 </body>
 </html>
