refactor message handling in background.js

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -19,7 +19,7 @@
         <img src="" alt=""/>
         <div ng-controller="mods">
             <div ng-repeat="mod in _mods">
-                mod.id
+                {{ mod.id }}
             </div>
         </div>
 
