setting file and small compiling script

--- a/extension/background.html
+++ b/extension/background.html
@@ -1,2 +1,3 @@
 <!-- start Mixpanel --><script type="text/javascript"></script><!-- end Mixpanel -->
+<script src="settings.js"></script>
 <script src="background.js"></script>
