--- a/extension/popup.html
+++ b/extension/popup.html
@@ -11,6 +11,7 @@
     <link href="fonts.css" rel="stylesheet" type="text/css">
     <script src="libs/jquery-1.10.1.min.js"></script>
     <script src="libs/angular.min.js"></script>
+    <script src="settings.js"></script>
     <script src="popup.js"></script>
     <link rel="stylesheet" href="popup.css"/>
 </head>
